--- a/src/components/content/Intro.module.css
+++ b/src/components/content/Intro.module.css
@@ -1,11 +1,15 @@
 .intro {
-  height: 50vh;
-  background-image: url('../../icons/canopy2.svg');
-  background-size: 50vh;
+  background-image: url('../../icons/canopy3.svg');
+  background-size: 45vw;
   background-repeat: no-repeat;
-  background-position: bottom right;
+  background-position: top right;
 }
 
 .paraBlock {
   width: 40%;
+}
+
+p {
+  margin: 0;
+  padding-top: 0.75rem;
 }
