--- a/src/components/layout/Nav.module.css
+++ b/src/components/layout/Nav.module.css
@@ -1,3 +1,30 @@
 .nav {
-  height: 10vh;
+  height: 15vh;
+  padding-right: 10px;
+  position: sticky;
+  top: 0px;
+  color: #ddffff;
+  display: flex;
+  justify-content: space-between;
+}
+
+.nav span {
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 1.3rem;
+}
+
+.title {
+  /* HIDE ON SCROLL */
+}
+
+.home {
+  /* HIDE BEFORE SCROLL */
+}
+
+.lang {
+  /* MOVE LEFT ON SCROLL */
+}
+
+.burger {
+  /* MOVED LEFT ON SCROLL */
 }
