add vertical timeline module

--- a/src/components/content/RootSection.module.css
+++ b/src/components/content/RootSection.module.css
@@ -1,6 +1,6 @@
 .rootSection {
   height: 50vh;
-  background-image: url('../../icons/plaintrunk.svg');
+  background-image: url('../../icons/root_section_2.svg');
   background-size: 45vw;
   background-repeat: no-repeat;
   background-position: top right;
