adjust svg scaling, add media queries, resolve sticky header

--- a/src/components/content/TopSection.module.css
+++ b/src/components/content/TopSection.module.css
@@ -1,6 +1,6 @@
 .topSection {
   background-image: url('../../icons/plaintrunk.svg');
-  background-size: 45vw;
+  background-size: min(45vw, 200px);
   background-repeat: repeat-y;
   background-position: top right;
 }
