--- a/src/components/layout/Nav.module.css
+++ b/src/components/layout/Nav.module.css
@@ -1,20 +1,35 @@
 .nav {
-  height: 15vh;
+  height: 8vh;
+  width: 100%;
   padding-right: 10px;
-  position: sticky;
-  top: 0px;
+  margin-left: -10px;
+  position: fixed;
+  top: 0;
   color: #ddffff;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
+  align-items: center;
+  background: #56ccf2; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #2f80ed, #56ccf2); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #2f80ed,
+    #56ccf2
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  z-index: 1000;
+  border-bottom: 3px solid black;
 }
 
 .nav span {
   font-family: 'Ubuntu', sans-serif;
-  font-size: 1.3rem;
+  font-size: 2rem;
 }
 
 .title {
   /* HIDE ON SCROLL */
+  color: white;
+  font-size: 2.5rem;
+  margin-bottom: 2vh;
 }
 
 .home {
