--- a/src/components/content/Intro.module.css
+++ b/src/components/content/Intro.module.css
@@ -1,15 +1,29 @@
 .intro {
+  margin-top: 12vh;
   background-image: url('../../icons/canopy3.svg');
-  background-size: 45vw;
+  background-size: min(45vw, 200px);
   background-repeat: no-repeat;
   background-position: top right;
 }
 
-.paraBlock {
-  width: 40%;
+.intro h1 {
+  color: #ddffff;
+  font-size: 3rem;
+  margin-bottom: 2rem;
 }
 
-p {
+.paraBlock {
+  width: 40%;
   margin: 0;
   padding-top: 0.75rem;
+}
+
+@media (min-width: 740px) {
+  .intro {
+    background-size: min(45vw, 300px);
+    /* background-position: center top; */
+
+    height: 50vh;
+    color: red;
+  }
 }
