--- a/src/components/layout/Nav.module.css
+++ b/src/components/layout/Nav.module.css
@@ -7,7 +7,7 @@
   top: 0;
   color: #ddffff;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
   background: #56ccf2; /* fallback for old browsers */
   background: -webkit-linear-gradient(to left, #2f80ed, #56ccf2); /* Chrome 10-25, Safari 5.1-6 */
@@ -18,6 +18,28 @@
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   z-index: 1000;
   border-bottom: 3px solid black;
+}
+
+.navBg {
+  background: #56ccf2; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #2f80ed, #56ccf2); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #2f80ed,
+    #56ccf2
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  display: flex;
+  justify-content: space-between;
+}
+
+.hidden {
+  opacity: 0;
+}
+
+.notHidden {
+  transition: all 1500ms ease-in-out;
+  opacity: 1;
+  order: 2;
 }
 
 .nav span {
