--- a/src/components/layout/Nav.module.css
+++ b/src/components/layout/Nav.module.css
@@ -8,8 +8,8 @@
   top: 0;
   color: #ddffff;
   display: grid;
-  grid-template-areas: 'left right';
-  grid-template-columns: 1fr 1fr;
+  grid-template-areas: 'left center right';
+  grid-template-columns: 5fr 3fr 1fr;
   grid-template-rows: 1fr;
   align-items: center;
   background: #56ccf2; /* fallback for old browsers */
@@ -26,7 +26,7 @@
 .initialControls {
   width: 50vw;
   /* margin-left: auto; */
-  grid-area: right;
+  grid-area: center;
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -38,21 +38,20 @@
 
 @keyframes moveControls {
   0% {
-    opacity: 1;
-    grid-area: right;
-    justify-self: end;
+    opacity: 0;
+    grid-area: left;
+    justify-self: start;
   }
   20% {
     opacity: 0;
-    grid-area: right;
   }
   50% {
-    grid-area: left;
+    opacity: 0;
   }
   100% {
     opacity: 1;
     transform: translateX(10px);
-    transform: scale(0.95);
+    transform: scale(0.8);
   }
 }
 
@@ -70,7 +69,7 @@
   0% {
     display: default;
     opacity: 0;
-    grid-area: right;
+    grid-area: center;
     width: 50vw;
     font-size: 1.7rem;
   }
@@ -79,10 +78,10 @@
   }
   100% {
     opacity: 1;
-    grid-area: right;
+    grid-area: center;
     width: 50vw;
     font-size: 1.6rem;
-    transform: translateX(10px);
+    transform: translate(15px, 3px);
   }
 }
 
@@ -103,5 +102,10 @@
 }
 
 .toggle {
-  margin-bottom: -7px;
+  margin-bottom: -8px;
+}
+
+.burger {
+  grid-area: right;
+  justify-self: end;
 }
