--- a/src/components/content/Intro.module.css
+++ b/src/components/content/Intro.module.css
@@ -9,13 +9,38 @@
 .intro h1 {
   color: #ddffff;
   font-size: 2.4rem;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
 
-.paraBlock {
-  width: 40%;
-  margin: 0;
-  padding-top: 0.75rem;
+.essentials {
+  margin-top: 1rem;
+  margin-left: 0.2rem;
+}
+
+.essentials a {
+  width: fit-content;
+  display: flex;
+  align-items: center;
+  color: #ddffff;
+  border-radius: 10px;
+  padding: 5px 10px;
+  background: #7cccf544;
+  margin-bottom: 1.5rem;
+}
+
+.essentials span {
+  color: #ddffff;
+  font-size: 1.15rem;
+  padding-left: 10px;
+  white-space: nowrap;
+}
+
+a:hover {
+  background-color: #7cccf566;
+}
+
+.essentials a:last-child {
+  margin-bottom: 0;
 }
 
 @media (min-width: 740px) {
