start desktop view intro

--- a/src/components/content/Intro.module.css
+++ b/src/components/content/Intro.module.css
@@ -49,10 +49,14 @@ a:hover {
 
 @media (min-width: 740px) {
   .intro {
-    background-size: min(45vw, 300px);
+    background-image: url('../../icons/canopy4.svg');
+    background-size: min(33vw, 500px);
     /* background-position: center top; */
-
-    height: 50vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 60vh;
     color: red;
   }
 }
