--- a/src/components/layout/Nav.module.css
+++ b/src/components/layout/Nav.module.css
@@ -108,3 +108,58 @@
   grid-area: right;
   justify-self: end;
 }
+
+@media (min-width: 740px) {
+  .initialControls {
+    margin-left: -9%;
+  }
+
+  @keyframes revealTitle {
+    0% {
+      display: default;
+      opacity: 0;
+      grid-area: center;
+      width: 50vw;
+      font-size: 1.7rem;
+    }
+    10% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+      grid-area: center;
+      justify-self: center;
+      width: 50vw;
+      font-size: 2.4rem;
+      transform: translate(-15px, 3px);
+    }
+  }
+}
+
+@media (min-width: 1600px) {
+  .initialControls {
+    margin-left: -4%;
+  }
+
+  @keyframes revealTitle {
+    0% {
+      display: default;
+      opacity: 0;
+      grid-area: center;
+      width: 50vw;
+      font-size: 1.7rem;
+    }
+    10% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+      grid-area: center;
+      justify-self: center;
+      width: 50vw;
+      font-size: 2.4rem;
+      padding-left: 2vw;
+      /* transform: translate(15px, 3px); */
+    }
+  }
+}
