replace desktop header layout with flex

--- a/src/components/content/TopSection.module.css
+++ b/src/components/content/TopSection.module.css
@@ -16,3 +16,10 @@
 .highlight {
   color: #ddffff;
 }
+
+@media (min-width: 740px) {
+  .topSection {
+    background-image: url('../../icons/plaintrunk2.svg');
+    background-size: min(33vw, 500px);
+  }
+}
