--- a/src/components/layout/Nav.module.css
+++ b/src/components/layout/Nav.module.css
@@ -66,7 +66,7 @@
 
 @keyframes revealTitle {
   0% {
-    display: default;
+    display: block;
     opacity: 0;
     grid-area: center;
     width: 50vw;
@@ -110,6 +110,69 @@
 }
 
 @media (min-width: 740px) {
+  .nav {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    padding-right: 0;
+  }
+
+  .scrollNav {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .initialControls {
+    order: 1;
+    width: 100%;
+  }
+
+  .scrolledControls {
+    animation: default;
+    order: 1;
+    width: 100%;
+  }
+
+  .lang {
+    width: 100%;
+  }
+
+  .hiddenTitle {
+    display: block;
+    opacity: 1;
+    order: 2;
+    width: 100%;
+    font-size: 2.2rem;
+  }
+
+  .notHiddenTitle {
+    animation: default;
+    display: block;
+    opacity: 1;
+    order: 2;
+    width: 100%;
+    font-size: 2.2rem;
+  }
+
+  .burger {
+    order: 3;
+    text-align: center;
+    width: 100%;
+  }
+}
+
+@media (min-width: 810px) {
+  .hiddenTitle {
+    font-size: 2.5rem;
+  }
+
+  .notHiddenTitle {
+    font-size: 2.5rem;
+  }
+}
+
+/* @media (min-width: 740px) {
   .initialControls {
     margin-left: -9%;
   }
@@ -159,7 +222,6 @@
       width: 50vw;
       font-size: 2.4rem;
       padding-left: 2vw;
-      /* transform: translate(15px, 3px); */
     }
   }
-}
+} */
