--- a/src/components/content/Intro.module.css
+++ b/src/components/content/Intro.module.css
@@ -52,12 +52,28 @@ a:hover {
     margin-top: 10vh;
     background-image: url('../../icons/canopy4.svg');
     background-size: min(33vw, 500px);
-    /* background-position: center top; */
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
     height: 60vh;
     color: red;
+  }
+
+  .intro h1 {
+    visibility: hidden;
+  }
+
+  .intro h2 {
+    font-size: 2rem;
+    margin-top: -2rem;
+  }
+
+  .intro h3 {
+    font-size: 1.5rem;
+  }
+
+  .essentials span {
+    font-size: 1.4rem;
   }
 }
