--- a/src/components/content/TopSection.module.css
+++ b/src/components/content/TopSection.module.css
@@ -22,4 +22,41 @@
     background-image: url('../../icons/plaintrunk2.svg');
     background-size: min(33vw, 500px);
   }
+
+  .desktopFlexWrapper {
+    display: flex;
+    justify-content: center;
+  }
+
+  .desktopFlexItem {
+    width: 60%;
+    margin-left: 10%;
+    max-width: 800px;
+    font-size: 1.15rem;
+  }
+}
+
+/* SVG TREE SCALING FOR LARGER VIEWS */
+@media (min-width: 1400px) {
+  .topSection {
+    background-position: 64vw;
+  }
+}
+
+@media (min-width: 1500px) {
+  .topSection {
+    background-position: 63vw;
+  }
+}
+
+@media (min-width: 1600px) {
+  .topSection {
+    background-position: 61vw;
+  }
+}
+
+@media (min-width: 2000px) {
+  .topSection {
+    background-position: 60vw;
+  }
 }
