--- a/src/components/layout/Footer.module.css
+++ b/src/components/layout/Footer.module.css
@@ -5,51 +5,71 @@
   padding-top: 2rem;
   padding-bottom: 1rem;
   color: #ddffff;
+  display: flex;
+  justify-content: center;
 }
 
-@media (min-width: 740px) {
-  .footer {
-    display: flex;
-    justify-content: center;
+.footerItem {
+  width: 60%;
+  margin-left: 10%;
+  max-width: 800px;
+}
+
+.secondI {
+  padding-left: 25%;
+}
+
+.thirdI {
+  padding-left: 50%;
+}
+
+.fourthI {
+  padding-left: 70%;
+}
+
+.email a {
+  width: fit-content;
+  display: flex;
+  align-items: center;
+  color: black;
+  border-radius: 20px;
+  padding: 5px 10px;
+  background: #7cccf544;
+  margin-bottom: 1.5rem;
+}
+
+.email span {
+  color: black;
+  font-size: 1.15rem;
+  padding-left: 10px;
+  white-space: nowrap;
+}
+
+a:hover {
+  background-color: #7cccf566;
+}
+
+@media (max-width: 740px) {
+  .footerItem {
+    width: 100%;
+    margin-left: 0;
   }
 
-  .footerItem {
-    width: 60%;
-    margin-left: 10%;
-    max-width: 800px;
+  .firstI {
+    padding-bottom: 5px;
   }
 
   .secondI {
-    padding-left: 25%;
+    padding-left: 9%;
+    padding-bottom: 5px;
   }
 
   .thirdI {
-    padding-left: 50%;
+    padding-left: 23%;
+    padding-bottom: 5px;
   }
 
   .fourthI {
-    padding-left: 70%;
-  }
-
-  .email a {
-    width: fit-content;
-    display: flex;
-    align-items: center;
-    color: #ddffff;
-    border-radius: 20px;
-    padding: 5px 10px;
-    background: #7cccf544;
-    margin-bottom: 1.5rem;
-  }
-
-  .email span {
-    color: #ddffff;
-    font-size: 1.15rem;
-    padding-left: 10px;
-    white-space: nowrap;
-  }
-
-  a:hover {
-    background-color: #7cccf566;
+    padding-left: 30%;
   }
 }
