translation state and text throughout

--- a/src/components/layout/Nav.module.css
+++ b/src/components/layout/Nav.module.css
@@ -14,7 +14,7 @@
   align-items: center;
   background: #56ccf2;
   background: -webkit-linear-gradient(to left, #2f80ed, #56ccf2);
-  background: linear-gradient(to right, #2f80ed, #56ccf2);
+  background: linear-gradient(to right, #2f80ed, 60%, #56ccf2);
   z-index: 1000;
 }
 
