--- a/src/components/ui/SiteWrapper.module.css
+++ b/src/components/ui/SiteWrapper.module.css
@@ -19,6 +19,7 @@ body {
   background: linear-gradient(
     to right,
     #2f80ed,
+    60%,
     #56ccf2
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
